--- a/Monte Carlo simulation and Inverse design of Mach-Zehnder Interferometer-based photonic integrated circuits/insertion loss empirical formula.ipynb
+++ b/Monte Carlo simulation and Inverse design of Mach-Zehnder Interferometer-based photonic integrated circuits/insertion loss empirical formula.ipynb
@@ -265,26 +265,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'statsmodels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[34;01mstatsmodels\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapi\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[34;01msm\u001b[39;00m\n\u001b[32m      2\u001b[39m y = Loss_s[\u001b[33m'\u001b[39m\u001b[33mLoss_s\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      3\u001b[39m X = sm.add_constant(Loss_s[[\u001b[33m'\u001b[39m\u001b[33mLoss_c\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mN\u001b[39m\u001b[33m'\u001b[39m]])\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'statsmodels'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\julia_16waa\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\scipy\\stats\\_stats_py.py:1806: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>Loss_s</td>      <th>  R-squared:         </th> <td>   1.000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   1.000</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>3.653e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Mon, 26 Jan 2026</td> <th>  Prob (F-statistic):</th> <td>3.87e-11</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>19:09:40</td>     <th>  Log-Likelihood:    </th> <td>  25.594</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>     8</td>      <th>  AIC:               </th> <td>  -45.19</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>     5</td>      <th>  BIC:               </th> <td>  -44.95</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     2</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>    0.1590</td> <td>    0.014</td> <td>   11.183</td> <td> 0.000</td> <td>    0.122</td> <td>    0.196</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Loss_c</th>    <td>    0.0329</td> <td>    0.007</td> <td>    4.618</td> <td> 0.006</td> <td>    0.015</td> <td>    0.051</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>N</th>         <td>   -0.0180</td> <td>    0.002</td> <td>   -9.263</td> <td> 0.000</td> <td>   -0.023</td> <td>   -0.013</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Loss_c:N</th>  <td>   -0.4752</td> <td>    0.002</td> <td> -228.421</td> <td> 0.000</td> <td>   -0.481</td> <td>   -0.470</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 1.315</td> <th>  Durbin-Watson:     </th> <td>   1.139</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.518</td> <th>  Jarque-Bera (JB):  </th> <td>   0.554</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.610</td> <th>  Prob(JB):          </th> <td>   0.758</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.582</td> <th>  Cond. No.          </th> <td>1.49e+17</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 3.56e-32. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &     Loss\\_s      & \\textbf{  R-squared:         } &     1.000   \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     1.000   \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } & 3.653e+04   \\\\\n",
+       "\\textbf{Date:}             & Mon, 26 Jan 2026 & \\textbf{  Prob (F-statistic):} &  3.87e-11   \\\\\n",
+       "\\textbf{Time:}             &     19:09:40     & \\textbf{  Log-Likelihood:    } &    25.594   \\\\\n",
+       "\\textbf{No. Observations:} &           8      & \\textbf{  AIC:               } &    -45.19   \\\\\n",
+       "\\textbf{Df Residuals:}     &           5      & \\textbf{  BIC:               } &    -44.95   \\\\\n",
+       "\\textbf{Df Model:}         &           2      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                   & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{Intercept} &       0.1590  &        0.014     &    11.183  &         0.000        &        0.122    &        0.196     \\\\\n",
+       "\\textbf{Loss\\_c}   &       0.0329  &        0.007     &     4.618  &         0.006        &        0.015    &        0.051     \\\\\n",
+       "\\textbf{N}         &      -0.0180  &        0.002     &    -9.263  &         0.000        &       -0.023    &       -0.013     \\\\\n",
+       "\\textbf{Loss\\_c:N} &      -0.4752  &        0.002     &  -228.421  &         0.000        &       -0.481    &       -0.470     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       &  1.315 & \\textbf{  Durbin-Watson:     } &    1.139  \\\\\n",
+       "\\textbf{Prob(Omnibus):} &  0.518 & \\textbf{  Jarque-Bera (JB):  } &    0.554  \\\\\n",
+       "\\textbf{Skew:}          & -0.610 & \\textbf{  Prob(JB):          } &    0.758  \\\\\n",
+       "\\textbf{Kurtosis:}      &  2.582 & \\textbf{  Cond. No.          } & 1.49e+17  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified. \\newline\n",
+       " [2] The smallest eigenvalue is 3.56e-32. This might indicate that there are \\newline\n",
+       " strong multicollinearity problems or that the design matrix is singular."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                 Loss_s   R-squared:                       1.000\n",
+       "Model:                            OLS   Adj. R-squared:                  1.000\n",
+       "Method:                 Least Squares   F-statistic:                 3.653e+04\n",
+       "Date:                Mon, 26 Jan 2026   Prob (F-statistic):           3.87e-11\n",
+       "Time:                        19:09:40   Log-Likelihood:                 25.594\n",
+       "No. Observations:                   8   AIC:                            -45.19\n",
+       "Df Residuals:                       5   BIC:                            -44.95\n",
+       "Df Model:                           2                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      0.1590      0.014     11.183      0.000       0.122       0.196\n",
+       "Loss_c         0.0329      0.007      4.618      0.006       0.015       0.051\n",
+       "N             -0.0180      0.002     -9.263      0.000      -0.023      -0.013\n",
+       "Loss_c:N      -0.4752      0.002   -228.421      0.000      -0.481      -0.470\n",
+       "==============================================================================\n",
+       "Omnibus:                        1.315   Durbin-Watson:                   1.139\n",
+       "Prob(Omnibus):                  0.518   Jarque-Bera (JB):                0.554\n",
+       "Skew:                          -0.610   Prob(JB):                        0.758\n",
+       "Kurtosis:                       2.582   Cond. No.                     1.49e+17\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The smallest eigenvalue is 3.56e-32. This might indicate that there are\n",
+       "strong multicollinearity problems or that the design matrix is singular.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import statsmodels.api as sm\n",
-    "y = Loss_s['Loss_s']\n",
-    "X = sm.add_constant(Loss_s[['Loss_c','N']])\n",
-    "model = sm.OLS(y, X).fit()\n",
+    "import statsmodels.formula.api as smf\n",
+    "#should have prepare the dataframe consider poor only from the beginning\n",
+    "#this is almost the end so I overwrite the dataframe and get rid of rich\n",
+    "model=smf.ols(formula='Loss_s ~ Loss_c + N + Loss_c:N',data=Loss_s.dropna()).fit()\n",
     "model.summary()"
    ]
   }
